--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,41 +8,94 @@
   <title>Frontend Mentor | Sunnyside agency landing page</title>
   <link rel="stylesheet" href="./style/main.css" />
 </head>
+
 <body>
-  About
-  Services
-  Projects
-  Contact
-  We are creatives
-  Transform your brand
-  We are a full-service creative agency specializing in helping brands grow fast.
-  Engage your clients through compelling visuals that do most of the marketing for you.
-  Learn more
-  Stand out to the right audience
-  Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.
-  Learn more
-  Graphic design
-  Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
-  Photography
-  Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
-  Client testimonials
-  We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.
-  Emily R.
-  Marketing Director
-  Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.
-  Thomas S.
-  Chief Operating Officer
-  Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!
-  Jennie F.
-  Business Owner
-  About
-  Services
-  Projects
-  Contact
+  <div class="container">
+    <header>
+      <nav>
+        <img src="./images/logo.svg" alt="logo" />
+        <img src="./images/icon-hamburger.svg" alt="icon hamburger" />
+        <div>
+          <span><a href="">About</a></span>
+          <span><a href="">Services</a></span>
+          <span><a href="">Projects</a></span>
+          <span class="active"><a href="">Contact</a></span>
+        </div>
+      </nav>
+      <div>
+        <h1>We are creatives</h1>
+        <img src="./images/icon-arrow-down.svg" alt="icon arrow down" />
+      </div>
+    </header>
+    <section>
+      <img src="./images/mobile/image-transform.jpg" alt="image transform" />
+      <h2>Transform your brand</h2>
+      <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+      <button>Learn more</button>
+    </section>
+    <section>
+      <img src="./images/mobile/image-stand-out.jpg" alt="image stand out" />
+      <h2>Stand out to the right audience</h2>
+      <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+      <button>Learn more</button>
+    </section>
+    <section>
+      <h2>Graphic design</h2>
+      <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+    </section>
+    <section>
+      <h2>Photography</h2>
+      <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+    </section>
+    <section>
+      <h2>Client testimonials</h2>
+      <div>
+        <img src="./images/image-emily.jpg" alt="image emily" />
+        <p>We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+        <p>Emily R.</p>
+        <p>Marketing Director</p>
+      </div>
+      <div>
+        <img src="./images/image-emily.jpg" alt="image emily" />
+        <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <p>Thomas S.</p>
+        <p>Chief Operating Officer</p>
+      </div>
+      <div>
+        <img src="./images/image-emily.jpg" alt="image emily" />
+        <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+        <p>Jennie F.</p>
+        <p>Business Owner</p>
+      </div>
+    </section>
+    <footer>
+      <div>
+        <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="image gallery milkbottles" />
+        <img src="./images/mobile/image-gallery-orange.jpg" alt="image gallery orange" />
+        <img src="./images/mobile/image-gallery-cone.jpg" alt="image gallery cone" />
+        <img src="./images/mobile/" alt="" />
+        <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="image gallery sugar cubes" />
+        <img src="./images/logo-footer.svg" alt="logo footer" />
+      </div>
+      <div>
+        <span>About</span>
+        <span>Services</span>
+        <span>Projects</span>
+        <span>Contact</span>
+      </div>
+      <div>
+        <img src="./images/icon-facebook.svg" alt="icon facebook" />
+        <img src="./images/icon-twitter.svg" alt="icon twitter" />
+        <img src="./images/icon-instagram.svg" alt="icon instagram" />
+        <img src="./images/icon-pinterest.svg" alt="icon pinterest" />
+      </div>
+    </footer>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Abdullah Alnoime</a>.
   </div>
   <script src="./script/main.js"></script>
 </body>
+
 </html>
