--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <img src="./images/logo.svg" alt="logo" />
         <img src="./images/icon-hamburger.svg" alt="icon hamburger" />
         <div>
-          <span><a href="">About</a></span>
-          <span><a href="">Services</a></span>
-          <span><a href="">Projects</a></span>
-          <span class="active"><a href="">Contact</a></span>
+          <span onload="click()"><a href="#">About</a></span>
+          <span><a href="#">Services</a></span>
+          <span><a href="#">Projects</a></span>
+          <span><a href="#">Contact</a></span>
         </div>
       </nav>
       <div>
@@ -28,24 +28,32 @@
       </div>
     </header>
     <section>
-      <img src="./images/mobile/image-transform.jpg" alt="image transform" />
-      <h2>Transform your brand</h2>
-      <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
-      <button>Learn more</button>
+      <div>
+        <img src="./images/mobile/image-transform.jpg" alt="image transform" />
+        <div>
+          <h2>Transform your brand</h2>
+          <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+          <button>Learn more</button>
+        </div>
+      </div>
+      <div>
+        <img src="./images/mobile/image-stand-out.jpg" alt="image stand out" />
+        <div>
+          <h2>Stand out to the right audience</h2>
+          <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+          <button>Learn more</button>
+        </div>
+      </div>
     </section>
     <section>
-      <img src="./images/mobile/image-stand-out.jpg" alt="image stand out" />
-      <h2>Stand out to the right audience</h2>
-      <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
-      <button>Learn more</button>
-    </section>
-    <section>
-      <h2>Graphic design</h2>
-      <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
-    </section>
-    <section>
-      <h2>Photography</h2>
-      <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      <div>
+        <h2>Graphic design</h2>
+        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+      </div>
+      <div>
+        <h2>Photography</h2>
+        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      </div>
     </section>
     <section>
       <h2>Client testimonials</h2>
@@ -56,13 +64,13 @@
         <p>Marketing Director</p>
       </div>
       <div>
-        <img src="./images/image-emily.jpg" alt="image emily" />
+        <img src="./images/image-thomas.jpg" alt="image thomas" />
         <p>Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
         <p>Thomas S.</p>
         <p>Chief Operating Officer</p>
       </div>
       <div>
-        <img src="./images/image-emily.jpg" alt="image emily" />
+        <img src="./images/image-jennie.jpg" alt="image jennie" />
         <p>Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
         <p>Jennie F.</p>
         <p>Business Owner</p>
@@ -73,7 +81,6 @@
         <img src="./images/mobile/image-gallery-milkbottles.jpg" alt="image gallery milkbottles" />
         <img src="./images/mobile/image-gallery-orange.jpg" alt="image gallery orange" />
         <img src="./images/mobile/image-gallery-cone.jpg" alt="image gallery cone" />
-        <img src="./images/mobile/" alt="" />
         <img src="./images/mobile/image-gallery-sugar-cubes.jpg" alt="image gallery sugar cubes" />
         <img src="./images/logo-footer.svg" alt="logo footer" />
       </div>
